# agentic-trading-copilot

./: .gitignore
trading_copilot/: DATE_FILTER_FIX_SUMMARY.md  README.md  TESTING_SUMMARY.md  pyproject.toml
trading_copilot/config/: app_config.yaml  evaluation_config.yaml  sources.yaml
trading_copilot/reports/: evaluation_report_multi_20260302_092543__OG.html  evaluation_report_multi_20260302_093209.html  evaluation_report_multi_20260302_093430.html  evaluation_report_statistical_20260302_094657.html  evaluation_report_statistical_20260302_095129.html  evaluation_report_statistical_20260302_100437.html  trading_copilot_report_20260302_063024.html
trading_copilot/scripts/: run_copilot.py  run_evaluation.py  run_statistical_evaluation.py  test_mvp.py
trading_copilot/src/trading_copilot/: __init__.py  analyzer.py  config.py  email_service.py  html_report.py  models.py  report.py  validator.py
trading_copilot/src/trading_copilot/agents/: __init__.py  base.py  news.py  reddit.py
trading_copilot/src/trading_copilot/evaluation/: __init__.py  config_models.py  epoch_runner.py  errors.py  models.py  (+9 more)
trading_copilot/tests/: __init__.py  test_analyzer.py  test_config.py  test_email_service.py  test_epoch_runner.py  test_evaluation_runner.py  test_historical_data_fetcher.py  test_html_report.py  test_metrics_calculator.py  test_news_agent.py  test_news_agent_properties.py  test_outcome_fetcher.py  test_report.py  test_report_generator.py  test_validator.py  test_validator_properties.py  test_web_search_date_filter_bug.py  test_web_search_date_filter_preservation.py
(+31 files in other folders)
